--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <input type="text" id="r" placeholder="{1...4}">
 
     <div id="alert"></div>
-    <button type="submit" class="update-data-button" onclick="send()">Отправить данные</button>
+       <button type="submit" class="update-data-button">Отправить данные</button>
    </form>
    </div>
    <div class="table-block">
@@ -146,6 +146,5 @@
   </body>
   <script src="js/sender.js"></script>
   <script src="js/validator.js"></script>
-  <script src="js/radioCheck.js"></script>
   </html>
 
