--- a/index.html
+++ b/index.html
@@ -123,7 +123,6 @@
         <label for="r">Радиус R:</label>
         <label><input type="text" id="r" placeholder="{1...4}" required></label>
 
-        <div id="alert"></div>
         <input type="submit" class="update-data-button" value="Отправить данные"></input>
     </form>
 </div>
@@ -141,7 +140,6 @@
     </table>
 </div>
 </body>
-<script src="js/sender.js"></script>
-<script src="js/validator.js"></script>
+<script src="js/script.js"></script>
 </html>
 
