--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="images/emoji.ico" type="image/x-icon"/>
 
     <style>
         body {
@@ -84,11 +84,12 @@
             transform: scale(1.4);
         }
 
-        .update-data-button {
+        .data-button {
             display: block;
             margin-top: 5%;
             margin-bottom: 2%;
-            margin-left: 25%;
+            /*margin-left: 1%;*/
+            margin-right: 1%;
             font-size: 15px;
             border-radius: 7px;
             border: 2px solid black;
@@ -98,32 +99,28 @@
             background-color: black;
             cursor: pointer;
         }
-        .update-data-button.dark{
+        .data-button.dark{
             border: 2px solid white;
             color: black;
             background-color: white;
         }
 
-        .update-data-button:hover {
+        .data-button:hover {
             background-color: #DCDCDC;
         }
 
-        .update-data-button:active {
+        .data-button:active {
             background-color: black;
         }
-        .update-data-button:active.dark{
+        .data-button:active.dark{
             background-color: white;
         }
 
-        table {
-            /*border: 3px solid white;*/
+        table:not(.buttons) {
             margin-left: 20%;
-            /*position: fixed;*/
-            /*top: 0;*/
-            /*right:0;*/
         }
 
-        th,td {
+        table:not(.buttons) th,td {
             border: 3px dashed #95918C;
             text-align: center;
         }
@@ -145,6 +142,10 @@
         .change-theme-button:active{
             background-color: white;
         }
+        .buttons{
+            border: none;
+            text-align: center;
+        }
 
     </style>
 </head>
@@ -156,13 +157,12 @@
     <h3>Группа: P3225</h3>
     <h3>Номер варианта:3500</h3>
     <button id="theme-toggle" class="change-theme-button">
-        <img src = "daynight.ico" alt="Иконка" width="25" height="25">
+        <img src = "images/daynight.ico" alt="Иконка" width="25" height="25">
     </button>
 </div>
-<!--<button id="theme-toggle">Переключить тему</button>-->
 <div class="form-block">
     <figure class="areas-pic">
-        <img src="areas.png" alt="areas" id="areas">
+        <img src="images/areas.png" alt="areas" id="areas">
     </figure>
     <form id="valForm">
             <label>Координата X:</label>
@@ -183,8 +183,14 @@
 
         <label for="r">Радиус R:</label>
         <label><input type="text" id="r" placeholder="{1...4}" maxlength="10" required></label>
+        <table class="buttons">
+            <tr>
+            <th><input type="submit" class="data-button" value="Отправить данные"></th>
+            <th><input type="reset" class="data-button" onclick="resetForm()" value="Сбросить данные"></th>
+            </tr>
+        </table>
 
-        <input type="submit" class="update-data-button" value="Отправить данные">
+
     </form>
 </div>
 <div class="table-block">
