--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         }
 
         table:not(.buttons) {
-            margin-left: 20%;
+            margin-left: 40%;
         }
 
         table:not(.buttons) th,td {
@@ -164,6 +164,7 @@
     <figure class="areas-pic">
         <img src="images/areas.png" alt="areas" id="areas">
     </figure>
+    <div id="message"></div>
     <form id="valForm">
             <label>Координата X:</label>
         <div class="x-radio">
