--- a/index.html
+++ b/index.html
@@ -6,45 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/emoji.ico" type="image/x-icon"/>
-
     <style>
+        html[data-theme='light']{
+            --bg: white;
+            --color-text:black;
+            --color-border:black;
+            --color-button:black;
+            --color-button-text:white;
+            --color-button-active:black;
+        }
+        html[data-theme='dark']{
+            --bg: black;
+            --color-text:white;
+            --color-border:white;
+            --color-button:white;
+            --color-button-text:black;
+            --color-button-active:white;
+        }
         body {
-            background-color: white;
+            background-color: var(--bg);
+            color:var(--color-text);
             font-family: sans-serif;
         }
-        body.dark{
-            background-color: black;
-            color:white;
-        }
-
         .header {
             border-style: solid;
-            border-color: black;
+            border-color: var(--color-border);
             border-width: 10px;
-            color: black;
+            color: var(--color-text);
             font-size: 15px;
             text-align: center;
             font-family: Arial, Helvetica, sans-serif;
         }
-        .header.dark{
-            border-style: solid;
-            border-color: white;
-            border-width: 10px;
-            color: white;
-            font-size: 15px;
-            text-align: center;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        .form-block.dark{
-            background-color: black;
-            border: 5px solid white;
-            color:white;
-
-        }
-
         .form-block {
-            background-color: white;
-            border: 5px solid black;
+            background-color: var(--bg);
+            color: var(--color-text);
+            border-color: var(--color-border);
+            border: 5px solid;
             border-radius: 7px;
             padding: 1%;
             float: left;
@@ -55,7 +52,6 @@
 
         label {
             display: block;
-            /*margin: 1%;*/
         }
 
         .x-radio {
@@ -88,32 +84,23 @@
             display: block;
             margin-top: 5%;
             margin-bottom: 2%;
-            /*margin-left: 1%;*/
             margin-right: 1%;
             font-size: 15px;
             border-radius: 7px;
-            border: 2px solid black;
-            color: white;
+            border: 2px solid;
+            border-color: var(--color-border);
+            color: var(--color-button-text);
             height: 35px;
             padding: 1px;
-            background-color: black;
+            background-color: var(--color-button);
             cursor: pointer;
         }
-        .data-button.dark{
-            border: 2px solid white;
-            color: black;
-            background-color: white;
-        }
-
         .data-button:hover {
             background-color: #DCDCDC;
         }
 
         .data-button:active {
-            background-color: black;
-        }
-        .data-button:active.dark{
-            background-color: white;
+            background-color: var(--color-button-active);
         }
 
         table:not(.buttons) {
